[package]
name = "is-macro"
description = "Easily create methods for to use yout custom enum like Option / Result"
version = "0.3.1"
documentation = "https://docs.rs/is-macro"
repository = "https://github.com/kdy1/is-macro"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
pmutil = "0.6.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["fold", "full", "derive", "extra-traits", "fold"] }
Inflector = { version = "0.11.4", default-features = false }
